feat: add eu distribution types
