# src/main/java/no/fdk/referencedata/eu/distributiontype/DistributionTypes.java
@@ -1,0 +1,12 @@
+package no.fdk.referencedata.eu.distributiontype;
+
+import lombok.Builder;
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+@Builder
+public class DistributionTypes {
+    List<DistributionType> distributionTypes;
+}
